tests/ui/feature-gates/feature-gate-auto-traits.stderr
error[E0658]: auto traits are experimental and possibly buggy
  --> $DIR/feature-gate-auto-traits.rs:1:1
   |
LL | auto trait DummyAutoTrait {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #13231 <https://github.com/rust-lang/rust/issues/13231> for more information
   = help: add `#![feature(auto_traits)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: auto traits are experimental and possibly buggy
  --> $DIR/feature-gate-auto-traits.rs:3:1
   |
LL | pub unsafe auto trait AnotherAutoTrait {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #13231 <https://github.com/rust-lang/rust/issues/13231> for more information
   = help: add `#![feature(auto_traits)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
