tests/ui/feature-gates/feature-gate-auto-traits.rs
auto trait DummyAutoTrait {} //~ ERROR auto traits are experimental and possibly buggy

pub unsafe auto trait AnotherAutoTrait {} //~ ERROR auto traits are experimental and possibly buggy

fn main() {}
